--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mytijian</groupId>
 	<artifactId>my-test-git-scm</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>my-test-git-scm</name>
@@ -18,7 +17,8 @@
 		<connection>scm:git:https://github.com/caizc381/my-test-project.git</connection>
 		<url>scm:git:https://github.com/caizc381/my-test-project.git</url>
 		<developerConnection>scm:git:https://github.com/caizc381/my-test-project.git</developerConnection>
-	</scm>
+	  <tag>my-test-git-scm-0.0.1</tag>
+  </scm>
 
 	<!-- 仓库地址 -->
 	<repositories>
