--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.mytijian</groupId>
 	<artifactId>my-test-git-scm</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>my-test-git-scm</name>
@@ -17,7 +17,7 @@
 		<connection>scm:git:https://github.com/caizc381/my-test-project.git</connection>
 		<url>scm:git:https://github.com/caizc381/my-test-project.git</url>
 		<developerConnection>scm:git:https://github.com/caizc381/my-test-project.git</developerConnection>
-    <tag>my-test-git-scm-0.0.4</tag>
+    <tag>my-test-git-scm-0.0.1</tag>
   </scm>
 
 	<!-- 仓库地址 -->
